...
    private func exitButton() {
        let exitButton = UIButton.systemButton(
            with: UIImage(named: "ipad.and.arrow.forward")!,
            target: self,
            action: #selector(Self.didTapLogoutButton))
        exitButton.tintColor = UIColor(named: "YP Red")
        exitButton.accessibilityIdentifier = "logout button"
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(exitButton)
        self.logoutButton = exitButton
        
        NSLayoutConstraint.activate([
            exitButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -20),
...
